maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:50: error: ':' expected but ',' found.
def pos(x,y): Boolean ={
         ^ShortestPathMaze:89: error: identifier expected but '}' found.
}
^